[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Chat_panel.gd" type="Script" id=1]
[ext_resource path="res://assets/font_60.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/Event_chat_panel.tscn" type="PackedScene" id=3]

[node name="Chat_panel" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 719.0
margin_bottom = 1281.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Event_list" type="ItemList" parent="Control"]
margin_left = 42.4802
margin_top = 98.5992
margin_right = 674.48
margin_bottom = 886.599
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -164.5
margin_right = 164.5
margin_bottom = 71.0
custom_fonts/font = ExtResource( 2 )
text = "Select Event"

[node name="Back_button" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -143.0
margin_top = -77.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select_button" type="Button" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -77.0
margin_right = 178.0
custom_fonts/font = ExtResource( 2 )
text = "Select"

[node name="Event_chat_panel" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="visibility_changed" from="." to="." method="_on_Chat_panel_visibility_changed"]
[connection signal="item_selected" from="Control/Event_list" to="." method="_on_Event_list_item_selected"]
[connection signal="pressed" from="Control/Back_button" to="." method="_on_Back_button_pressed"]
[connection signal="pressed" from="Control/Select_button" to="." method="_on_Select_button_pressed"]
